# staff-engineers-field-guide

./: .gitignore  404.html  BOOK.md  CLAUDE.md  CONTENT-TEMPLATE.md  Makefile  README.md  STAFF ENGINEER FIELD GUIDE.md  TEMPLATE-IMPLEMENTATION-PLAN.md  TEMPLATE-IMPLEMENTATION-QA-REPORT.md  THE STAFF ENGINEER’S FIELD GUIDE.md  build.py  cleanup.py  index.html  mkdocs.yml  organize_topics.py  prompts.py  pyproject.toml  qa-validation-script.py  staff-engineer-field-guide-sections.md  staff-engineer-field-guide-toc.md  staff-engineer-field-guide-topic-strucutre.md  targeted-field-guide-analysis.py  template-qa-report.json
.claude/agents/: git-sync.md  github-project-manager.md
.github/workflows/: ci.yml
appendix/antipatterns/: index.html
appendix/design-patterns/: index.html
appendix/domain-driven-design/: index.html
appendix/laws/: index.html
appendix/reading/: index.html
appendix/terms/: index.html
appendix/tools/: index.html
appendix/values/: index.html
docs/: index.md
docs/antipatterns/: antipatterns-overview.md  big-ball-of-mud.md  broken-windows.md  calendar-coder.md  code-smells.md  copy-paste-programming.md  duct-tape-coder.md  exposing-collection-properties.md  fast-beats-right.md  golden-hammer.md  iceberg-class.md  magic-strings.md  not-invented-here.md  one-thing-to-rule-them-all.md  smoke-and-mirrors.md  static-cling.md  walking-through-a-minefield.md
docs/communication/: crossfunctional-teams-collaboration.md  (+7 more)
scripts/: build.py  organize_topics.py  remove_redundant_backticks.py
search/: search_index.json
stylesheets/: extra.css
(+721 files in other folders)
