[project]
name = "staff-engineers-field-guide"
version = "0.1.0"
description = "AI assisted draft of a field guide for staff engineers"
authors = [
    {name = "JP White",email = "jpwhite3@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ollama (>=0.4.7,<0.5.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.15,<10.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
